# pucpr-agentes-conversacionais

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: prompt.md
src/wpp_agent/: __init__.py  __main__.py
src/wpp_agent/app/: __init__.py  agent.py  whatsapp_webcrawler.py  workflow.py
src/wpp_agent/schemas/: __init__.py  llm.py
src/wpp_agent/settings/: __init__.py  hf.py  log.py  settings.py  webdriver.py  whatsapp.py
src/wpp_agent/setup/: __init__.py  log.py  setup.py
src/wpp_agent/utils/: __init__.py  utils.py
